--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "app-root-path": "^2.1.0",
     "clf-date": "^0.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
